syntax = "proto3";

package v1;

option go_package = "./v1";

service ArticleService {
    rpc getArticles(GetArticleRequest) returns (ArticleResponse);
}

message ArticleResponse {
    string id = 1;
    string title = 2;
    string name = 3;
    string author = 4;
}

message GetArticleRequest {
    int32 userId = 1;
}